# ibm-watsonx-challenge

./: .env.example  .gitignore  BobBee_Pitch.html  README.md  assistant.py  credential_store.py  fake_data.py  llm_advisor.py  login_capture.py  mock_salesloft.py  mock_ui_templates.py  package.json  pyproject.toml  requirements.txt  run_pipeline.py  secure_auth_files.py  seller_accounts.py  ui_templates.py  wsgi.py
Account_Segmentation/: config.py  id_match.py  name_match.py  run.py  segment.py  test_segmentation.py
Account_Tiering/: config.py  run.py  sample_selection.py  schema_io.py  signal_scraper.py  tiering.py  zoominfo_enrich.py
Bobby_AI_Emailer/: bobby.py  config.py  emailer.py  run.py  salesloft_api.py
Call_Planning/: call_planning.py  config.py  run.py  schema_io.py  us_holidays.py
IBM_Scraper_App/: cid_login.py  config.py  covid_source.py  gtm_login.py  run.py  sub_cloud.py  sub_isc_install.py  sub_power.py  sub_storage.py  test_ibm_scraper.py  w3id_login_chrome.py  w3id_seed.py
ISC_Scraper_App/: auto_reliability_watch.py  launcher.py  reliability_test.py  test_scrape_logic.py
Salesloft_Cadence_Readiness/: config.py  run.py  salesloft_advance.py
ZoomInfo_Contact_Readiness/: config.py  env_utils.py  run.py  schema_io.py  zoominfo_import.py
bobbee/: __init__.py  app.py  config.py  paths.py
docs/: ARCHITECTURE.md  CHANGELOG.md  DESIGN_REVIEW.md  DEVELOPMENT.md  GOTCHAS.md  OPERATIONS.md  SECURITY.md  TECHNICAL.md  WATSONX_CHALLENGE_PRD.md
sales-platform/: package-lock.json  package.json
scripts/: seed_training_data.py
shared_auth/: guard.py  (+3 more)
(+106 files in other folders)
